fixed word wrap in code

--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,7 @@ ul.posts span {
 
 .post pre code {
   border: none;
+  word-wrap: break-word;
 }
 
 /* terminal */
